crates/math-core/tests/snapshots/error_test__hspace_math_unit.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\hspace{1mu} y"
---
Error: Math unit "mu" cannot be used with \kern/\hskip/\hspace.
   ╭─[ <input>:1:9 ]
   │
 1 │ x\hspace{1mu} y
   │         ──┬──  
   │           ╰──── illegal unit here
───╯
